--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,14 @@
             <artifactId>tomcat-jdbc</artifactId>
             <version>7.0.47</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
